--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
@@ -1,4 +1,5 @@
 {% from "externalLink.njk" import externalLink %}
+{% from "internalLink.njk" import internalLink %}
 {% from "./utilityMacros.njk" import downloadResponseLink, viewAndRespondOffer %}
 
 {% macro claimPartAdmittedAlreadyPaidForDefendantDashboard(claim) %}
@@ -22,22 +23,34 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedToOweForDefendantClaimDetails(claim) %}
+  {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
+
+  {% set paymentIntention = claim.response.paymentIntention %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('You’ve responded to the claim') }}</h2>
     <p>{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
         {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} immediately.',
           { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
       {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} on {{ paymentDate }}.',
-          { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
-      {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} by {{ paymentDate }}.',
+          { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name,
+            paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
+      {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
         {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
         {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
         {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule) %}
-        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} {{ installmentAmount }} {{ paymentSchedule }} starting {{ paymentDate }}.',
+        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }}
+            {{ installmentAmount }} {{ paymentSchedule }} starting {{ paymentDate }}.',
           { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name,
-            installmentAmount: installmentAmount, paymentSchedule: paymentSchedule, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
-      {% endif %}</p>
+            installmentAmount: installmentAmount, paymentSchedule: paymentSchedule | lower, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
+      {% endif %}
+
+      {% if claim.response.paymentIntention.paymentOption != domain.PaymentOption.IMMEDIATELY
+        and (claim.claimData.defendant.type === PartyType.COMPANY.value or claim.claimData.defendant.type === PartyType.ORGANISATION.value) %}
+        {{ t('You need to send them your company’s financial details if you haven’t already.') }}</p>
+        {{ internalLink('Get ' + claim.claimData.claimant.name + '’s contact details.', claimantDetailsPageURI ) }}
+      {% endif %}
+    </p>
     <p>{{ t('We’ll contact you when they respond.') }}</p>
     <p>{{ downloadResponseLink(claim) }}</p>
   </div>
