--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -48,8 +48,7 @@
   settlementAgreementSignedByClaimantDashboard,
   settlementAgreementSignedByClaimantDeadlinePassedDashboard,
   settlementAgreementSignedByBothClaimantDashboard,
-  settlementAgreementRejectedForClaimantDashboard
-%}
+  settlementAgreementRejectedForClaimantDashboard %}
 
 {% from "./claimStatus/offerSettlement.njk" import offerSettlementReachedDashboard %}
 
