--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -1,5 +1,6 @@
 {% from "internalLink.njk" import internalLink %}
 {% from "./utilityMacros.njk" import downloadAgreementLink %}
+{% from "./paidInFullClaimant.njk" import paidInFullClaimantButtonClaimDetails %}
 
 {% macro offerSettlementReachedDashboard() %}
   {{ t('You’ve both signed a legal agreement. The claim is now settled.') }}
@@ -112,8 +113,8 @@
         {{ downloadAgreementLink(claim) }}
       </p>
 
-      <p> {{ t('When you’ve been paid in full, you need to let us know.') }} </p>
-      <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
+      <p>{{ t('When you’ve been paid in full, you need to let us know.') }}</p>
+      {{ paidInFullClaimantButtonClaimDetails(claim) }}
 
       {% if claim.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
         <hr>
@@ -123,7 +124,10 @@
           + internalLink('request a County Court Judgment. ', ccjRequest )) | safe }}
         </p>
 
+    <p>{{ t('When you’ve been paid in full, you need to let us know.') }}</p>
+        {{ paidInFullClaimantButtonClaimDetails(claim) }}
       {% endif %}
+
 
     {% else %}
       <h2 class="heading-small">{{ t('Agreement signed') }}</h2>
