--- a/src/main/features/dashboard/views/index.njk
+++ b/src/main/features/dashboard/views/index.njk
@@ -28,7 +28,7 @@
         <tbody>
         {% if claimDraftSaved %}
           <tr class="draft mobile-table">
-            <td><a href="{{ DashboardPaths.cnmlaimantPage.evaluateUri({ externalId: 'draft' }) }}">{{ t('Draft claim') }}</a></td>
+            <td><a href="{{ DashboardPaths.claimantPage.evaluateUri({ externalId: 'draft' }) }}">{{ t('Draft claim') }}</a></td>
             <td>-</td>
 
             <td>-</td>
