--- a/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
@@ -1,3 +1,4 @@
+{% from "internalLink.njk" import internalLink %}
 {% macro downloadResponseLink(claim) %}
   <a href="{{ ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download your response') }}</a>{{ t(' (PDF)') }}
 {% endmacro %}
@@ -8,11 +9,9 @@
 
 {% macro signAgreementLink(claim, text = 'Sign the settlement agreement') %}
   {% if claim.settlement.isThroughAdmissions() %}
-    <a href="{{ SettlementAgreementPaths.signSettlementAgreement.evaluateUri({ externalId: claim.externalId }) }}"
-       class="button button-secondary">{{ t(text) }}</a>
+    {{ internalLink(t(text), SettlementAgreementPaths.signSettlementAgreement.evaluateUri({ externalId: claim.externalId }), "button button-secondary") }}
   {% else %}
-    <a href="{{ OfferPaths.countersignAgreementPage.evaluateUri({ externalId: claim.externalId }) }}"
-       class="button button-secondary">{{ t(text) }}</a>
+    {{ internalLink(t(text), OfferPaths.countersignAgreementPage.evaluateUri({ externalId: claim.externalId }), "button button-secondary") }}
   {% endif %}
 {% endmacro %}
 
