replace form with internalLink

--- a/src/main/features/settlement-agreement/views/repayment-plan-summary.njk
+++ b/src/main/features/settlement-agreement/views/repayment-plan-summary.njk
@@ -22,10 +22,7 @@
           <p>
       {% endif %}
       <p>{{ t('The claimant signed a settlement agreement based on their plan. You can choose to sign the agreement or not.') }}</p>
-      <form novalidate method="post">
-        {{ csrfProtection(csrf) }}
-        {{ submitButton('Respond to settlement agreement') }}
-      </form>
+      <p>{{ internalLink(t('Respond to settlement agreement'), SettlementAgreementPaths.signSettlementAgreement.evaluateUri({ externalId: claim.externalId }), "button") }}</p>
       <p>{{ t('If you do not respond, the claimant can request a County Court Judgment against you.') }}
     </div>
   </div>
