more refractoring, fixing and adding missing {{ t() }}s

--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
@@ -33,7 +33,7 @@
           { claimantName: claimant.name, amount: amount, paymentDate: paymentDate }) }}</p>
       <p>{{ t('If you pay by cheque or transfer the money must be clear in their account.') }}</p>
       <p>{{ t('If they don’t receive the money by then, they can request a County Court Judgment against you.') }}</p>
-      <p>{{ internalLink('Contact ' + claimant.name, claimantDetailsPageURI) }}
+      <p>{{ internalLink( t('Contact {{ claimantName }}' , { claimantName: claimant.name } ), claimantDetailsPageURI) }}
         {{ t('if you need their payment details. Make sure you get receipts for any payments.') }}</p>
     {% elseif paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
       <p>{{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} by {{ paymentDate }}.',
@@ -43,14 +43,17 @@
       {% set repaymentDate = repaymentPlan.firstPaymentDate | date %}
       {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule) %}
       {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
-      <p>{{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} {{ installmentAmount }} {{ paymentSchedule }} starting {{ paymentDate }}.',
-          { amount: amount, claimantName: claimant.name, installmentAmount: installmentAmount, paymentSchedule: paymentSchedule | lower, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
+      <p>{{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} {{ installmentAmount }}
+            {{ paymentSchedule }} starting {{ paymentDate }}.',
+          { amount: amount, claimantName: claimant.name, installmentAmount: installmentAmount,
+            paymentSchedule: paymentSchedule | lower, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
     {% endif %}
 
     {% if paymentIntention.paymentOption != domain.PaymentOption.IMMEDIATELY %}
       {% if defendant.isBusiness() %}
         {{ t('You need to send them your company’s financial details if you haven’t already.') }}</p>
-        {{ internalLink('Get ' + claimant.name + '’s contact details.', claimantDetailsPageURI ) }} </p>
+        {{ internalLink( t('Get {{ claimantName }}’s contact details.', { claimantName: claimant.name }),
+          claimantDetailsPageURI ) }} </p>
       {% endif %}
         <p>{{ t('We’ll contact you when they respond.') }}</p>
     {% endif %}
