--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
@@ -1,9 +1,15 @@
 {% from "externalLink.njk" import externalLink %}
+{% from "internalLink.njk" import internalLink %}
 {% from "./utilityMacros.njk" import downloadResponseLink, viewAndRespondOffer %}
 
 {% macro claimPartAdmittedAlreadyPaidForDefendantDashboard(claim) %}
   {{ t('We’ve emailed {{ claimantName }} telling them when and how you said you paid the claim.',
     { claimantName: claim.claimData.claimant.name }) }}
+{% endmacro %}
+
+{% macro partAdmittedClaimantAcceptsDefendantDashboard(claim) %}
+  {{ t('{{ claimantName }} accepted your admission of {{ amount }}',
+    { amount: claim.response.amount, claimantName: claim.claimData.claimant.name }) }}
 {% endmacro %}
 
 {% macro claimPartAdmittedAlreadyPaidForDefendantClaimDetails(claim) %}
@@ -40,5 +46,17 @@
       {% endif %}</p>
     <p>{{ t('We’ll contact you when they respond.') }}</p>
     <p>{{ downloadResponseLink(claim) }}</p>
+  </div>
+{% endmacro %}
+
+{% macro partAdmittedAcceptedPayImmediatelyDefendantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('{{ claimantName }} accepted your admission of {{ amount }}',
+        { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}</h2>
+    <p>{{ t('You must pay them by {{ paymentDate }}. Any cheques or transfers must be clear in their account by then.',
+        { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
+    <p>{{ t('If they don’t receive the money by then, they can request a County Court Judgment against you.') }}</p>
+    <p>{{ internalLink('Contact ' + claim.claimData.claimant.name, DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId })) }}
+      {{ t('if you need their payment details. Make sure you get receipts for any payments.') }}</p>
   </div>
 {% endmacro %}
