--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
@@ -24,7 +24,6 @@
 
 {% macro claimPartAdmittedToOweForDefendantClaimDetails(claim) %}
   {% set claimant = claim.claimData.claimant %}
-  {% set defendant = claim.claimData.defendant %}
   {% set paymentIntention = claim.response.paymentIntention %}
   {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
 
@@ -47,7 +46,8 @@
             paymentSchedule: paymentSchedule | lower, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
       {% endif %}
 
-      {% if paymentIntention.paymentOption != domain.PaymentOption.IMMEDIATELY and defendant.isBusiness() %}
+      {% if paymentIntention.paymentOption != domain.PaymentOption.IMMEDIATELY
+        and claim.claimData.defendant.isBusiness() %}
         {{ t('You need to send them your company’s financial details if you haven’t already.') }}</p>
         <p>{{ internalLink( t('Get {{ claimantName }}’s contact details.', { claimantName: claimant.name }),
             claimantDetailsPageURI ) }}
