--- a/src/main/features/dashboard/views/macro/claimStatus/offerAccepted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerAccepted.njk
@@ -13,29 +13,14 @@
 {% macro offerAcceptedForClaimantClaimDetails(claim) %}
   {% set defendantName = claim.claimData.defendant.name %}
   <h2 class="heading-small">{{ t('Settle out of court') }}</h2>
-  <p>
-    {{ t('You’ve agreed to the offer made by {{ defendantName }} and signed an agreement to settle your claim. ',
-      { defendantName: defendantName }) }}
-  </p>
-  <p>
-    {{ t('We’ve asked {{ defendantName}} to sign the agreement.',
-      { defendantName: defendantName }) }}
-  </p>
-
-  <p>
-    <hr>
-  </p>
-
-  <p>
-    <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2>
-    {{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can ') }} {{ _requestCCJLink(claim) }}
-  </p>
-
-{% endmacro %}
-
-{% macro _requestCCJLink(claim) %}
-  <a class="block" href="{{ CCJPaths.paidAmountPage.evaluateUri({externalId: claim.externalId}) }}">
- {{ t('request a County Court Judgment.') }}</a>
+  <div class="border-bottom">
+    <p>{{ t('You’ve agreed to the offer made by {{ defendantName }} and signed an agreement to settle your claim. ', { defendantName: defendantName }) }}</p>
+    <p>{{ t('We’ve asked {{ defendantName}} to sign the agreement.', { defendantName: defendantName }) }}</p>
+  </div>
+  <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2>
+  <p>{{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can '
+      + internalLink('request a County Court Judgment. ', CCJPaths.paidAmountPage.evaluateUri({
+        externalId:claim.externalId }) )) | safe }}</p>
   <div class="status-block">
     {% set defendantName = claim.claimData.defendant.name %}
     <h2 class="heading-small">{{ t('Settle out of court') }}</h2>
@@ -47,10 +32,8 @@
 {% endmacro %}
 
 {% macro offerAcceptedForDefendantDashboard() %}
-  <p>
-    {{ t('The claimant has accepted your offer. You need to sign a legal agreement to settle out of court.') }}
-  </p>
-  {{ t('You have rejected the claim.') }}
+  <p>{{ t('The claimant has accepted your offer. You need to sign a legal agreement to settle out of court.') }}</p>
+  <p>{{ t('You have rejected the claim.') }}</p>
 {% endmacro %}
 
 {% macro offerAcceptedForDefendantClaimDetails(claim) %}
