--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -32,6 +32,7 @@ ccjRequestedForDefendantClaimDetails %}
   settlementAgreementSignedByClaimantClaimDetails,
   settlementAgreementSignedByClaimantDeadlinePassedClaimDetails,
   settlementAgreementSignedByBothClaimantClaimDetails,
+  settlementAgreementRejectedClaimantClaimDetails,
   requestCCJ %}
 
 {% from "./claimStatus/claimFullAdmissionForDefendant.njk" import
@@ -64,7 +65,8 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
 {% from "./claimStatus/settlementAgreementDefendant.njk" import
   settlementAgreementSignedByClaimantDefendantClaimDetails,
   settlementAgreementSignedByBothDefendantClaimDetails,
-  settlementAgreementSignedByClaimantNewPaymentPlanDefendantClaimDetails %}
+  settlementAgreementSignedByClaimantNewPaymentPlanDefendantClaimDetails,
+  settlementAgreementRejectedDefendantClaimDetails %}
 
 {% from "./claimStatus/redeterminationRequestedDefendant.njk" import redeterminationDefendnatClaimDetails %}
 {% from "./claimStatus/redeterminationRequestedClaimant.njk" import redeterminationClaimantClaimDetails %}
@@ -139,6 +141,8 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
         {{ requestCCJ(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
         {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
+      {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
+        {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
       {% endif %}
   {% endfor %}
 {% endmacro %}
@@ -199,6 +203,8 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
         {{ offerSettlementReachedForDefendant(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
         {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
+      {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
+        {{ settlementAgreementRejectedDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
         {{ partAdmittedAcceptedPayImmediatelyDefendantClaimDetails(claim) }}
       {% endif %}
