--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -163,10 +163,10 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION or state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_DEFENDANT_NOT_SIGNED %}
       {{ settlementAgreementSignedByClaimantDefendantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ALTERNATIVE_PLAN_WITH_CCJ %}
-        {{ CCJByDeterminationDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.REDETERMINATION_BY_JUDGE %}
-        {{ redeterminationDefendnatClaimDetails(claim, csrf) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_COURT_PLAN_SETTLEMENT %}
+      {{ CCJByDeterminationDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.REDETERMINATION_BY_JUDGE %}
+      {{ redeterminationDefendnatClaimDetails(claim, csrf) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_COURT_PLAN_SETTLEMENT %}
       {{ settlementAgreementSignedByClaimantNewPaymentPlanDefendantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CCJ_REQUESTED %}
       {{ ccjRequestedForDefendantClaimDetails(claim) }}
@@ -180,22 +180,19 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
           {{ claimRejectedAlreadyPaidForDefendantClaimDetails(claim) }}
         {% elif claim.response.freeMediation === FreeMediationOption.NO %}
           {{ claimRejectedFreeMediationNOForDefendantClaimDetails(claim) }}
+        {% elif not claim.settlement and claim.response.defenceType !== DefenceType.ALREADY_PAID %}
+          {{ _settleOutOfCourtOption (claim) }}
         {% else %}
           {{ claimRejectedFreeMediationYESForDefendantClaimDetails(claim) }}
         {% endif %}
-
-          {% if not claim.settlement and claim.response.defenceType !== DefenceType.ALREADY_PAID %}
-            {{ _settleOutOfCourtOption (claim) }}
-          {% endif %}
-        {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-          {% if claim.response.paymentDeclaration %}
-            {{ claimPartAdmittedAlreadyPaidForDefendantClaimDetails(claim) }}
-          {% else %}
-            {{ claimPartAdmittedToOweForDefendantClaimDetails(claim) }}
-          {% endif %}
-        {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-            {{ claimFullAdmissionForDefendantClaimDetails(claim) }}
+      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+        {% if claim.response.paymentDeclaration %}
+          {{ claimPartAdmittedAlreadyPaidForDefendantClaimDetails(claim) }}
+        {% else %}
+          {{ claimPartAdmittedToOweForDefendantClaimDetails(claim) }}
         {% endif %}
+      {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
+        {{ claimFullAdmissionForDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.OFFER_SUBMITTED %}
         {{ offerSubmittedForDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.OFFER_REJECTED %}
