--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
@@ -28,22 +28,36 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedToOweForDefendantClaimDetails(claim) %}
+  {% set claimant = claim.claimData.claimant %}
+  {% set paymentIntention = claim.response.paymentIntention %}
+  {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
+
   <div class="status-block">
     <h2 class="heading-small">{{ t('You’ve responded to the claim') }}</h2>
-    <p>{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+    <p>{% if paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
         {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} immediately.',
-          { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
-      {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} on {{ paymentDate }}.',
-          { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
-      {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+          { amount: claim.response.amount | numeral, claimantName: claimant.name }) }}
+      {% elseif paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} by {{ paymentDate }}.',
+          { amount: claim.response.amount | numeral, claimantName: claimant.name,
+            paymentDate: paymentIntention.paymentDate | date }) }}
+      {% elseif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
         {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
         {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
         {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule) %}
-        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} {{ installmentAmount }} {{ paymentSchedule }} starting {{ paymentDate }}.',
-          { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name,
-            installmentAmount: installmentAmount, paymentSchedule: paymentSchedule, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
-      {% endif %}</p>
+        {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }}
+            {{ installmentAmount }} {{ paymentSchedule }} starting {{ paymentDate }}.',
+          { amount: claim.response.amount | numeral, claimantName: claimant.name, installmentAmount: installmentAmount,
+            paymentSchedule: paymentSchedule | lower, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
+      {% endif %}
+
+      {% if paymentIntention.paymentOption != domain.PaymentOption.IMMEDIATELY
+        and claim.claimData.defendant.isBusiness() %}
+        {{ t('You need to send them your company’s financial details if you haven’t already.') }}</p>
+        <p>{{ internalLink( t('Get {{ claimantName }}’s contact details.', { claimantName: claimant.name }),
+            claimantDetailsPageURI ) }}
+      {% endif %}
+    </p>
     <p>{{ t('We’ll contact you when they respond.') }}</p>
     <p>{{ downloadResponseLink(claim) }}</p>
   </div>
