--- a/src/main/features/settlement-agreement/views/settlement-agreement-confirmation.njk
+++ b/src/main/features/settlement-agreement/views/settlement-agreement-confirmation.njk
@@ -17,7 +17,7 @@
       {% elseif claim.settlement.isSettled() %}
         <h1 class="bold-large">{{ t('You’ve both signed a settlement agreement') }}</h1>
         <p class="receipt-download-container">
-          <a href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download settlement agreement') }}</a> (PDF)
+          {{ internalLink(t('Download settlement agreement'), OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId })) }} (PDF)
         </p>
       {% endif %}
     </div>
