--- a/src/main/features/claimant-response/views/confirmation/accepted-payment-plan.njk
+++ b/src/main/features/claimant-response/views/confirmation/accepted-payment-plan.njk
@@ -1,13 +1,13 @@
 {% set defendantFullName = claim.claimData.defendant.name %}
 
-<p>{{ t('We’ll email {{ defendantFullName }} to tell them you agree to their repayment plan and ask them to sign the settlement agreement.',
+<p>{{ t('We’ve emailed {{ defendantFullName }} the repayment plan and the settlement agreement for them to sign.',
     { defendantFullName: defendantFullName }) }}</p>
 
-<p>{{ t('They must respond by {{ responseDate }}. We’ll email you when they respond.', { responseDate: claim.claimantRespondedAt | addDays(7) | date }) }}</p>
+<p>{{ t('They must respond before 4pm on {{ responseDate }}. We’ll email you when they respond.', { responseDate: claim.claimantRespondedAt | addDays(7) | date }) }}</p>
 <p>{{ t('If they sign the agreement, this claim is put on hold.') }}</p>
 
 <p>{{ t('If they don’t sign the agreement or reject it, you can request a CCJ against them which orders them to pay in line with the terms of the repayment plan.') }}</p>
-
+<p>{{ t('If they don’t think they can afford the plan, they can ask for a judge to make a different plan.') }}</p>
 <h2 class="heading-medium">{{ t('If you don’t get paid') }}</h2>
 
 <p>{{ t('If {{ defendantFullName }} signs the settlement agreement but breaks the terms, you can request a County Court Judgment (CCJ) by signing in to your account.',
