--- a/src/main/features/claim/views/confirmation.njk
+++ b/src/main/features/claim/views/confirmation.njk
@@ -37,13 +37,7 @@
       <p>{{ t('You can request a default County Court Judgment (CCJ) against them if they don’t respond.') }}</p>
 
       <h2 class="heading-medium">{{ t('If the defendant pays you') }}</h2>
-      <p>
-        {{ t('You need to email {{ supportEmailAddress }} to let us know. Include the date you were paid.',
-          {
-            supportEmailAddress: supportEmailAddress
-          }
-        ) }}
-      </p>
+      <p>{{ t('You need to sign in to your account to tell us you’ve been paid.') }}</p>
 
       {% include "includes/service_survey_link.njk" %}
 
