--- a/src/main/features/claim/views/total.njk
+++ b/src/main/features/claim/views/total.njk
@@ -56,7 +56,7 @@
             </tbody>
           </table>
 
-          <p>{{ t('You can’t get the claim fee refunded. If you settle the claim out of court, you should include the fee in the settlement amount.') }}</p>
+          <p>{{ t('If you settle out of court we won’t refund your claim fee. You can ask Mary Richards to pay back your claim fee as part of the settlement.') }}</p>
 
           <table class="table-form form-group">
             <caption class="visuallyhidden"></caption>
@@ -87,4 +87,3 @@
     </div>
   </div>
 {% endblock %}
-
