Fixed is CCJ past payment date method

--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
@@ -53,12 +53,15 @@
     <p>{{ t('They said they’ll pay you immediately.') }}</p>
     <p>{{ t('They must make sure you have the money by {{ paymentDate }}. Any cheques or transfers should be clear in your account.',
         { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
-    <p>{{ t('You can settle for less than the full claim amount.') }}</p>
+    <p>{{ t('You need to tell us if you’ve settled the claim, for example because the defendant has paid you.') }}</p>
     {{ paidInFullClaimantButtonClaimDetails(claim) }}
     {% if claim.admissionPayImmediatelyPastPaymentDate %}
       <h2 class="heading-small">{{ t('If you haven’t been paid') }}</h2>
       <p>{{ t('If the defendant has not paid you, you can '
           + internalLink('request a County Court Judgment.', CCJPaths.paidAmountPage.evaluateUri({ externalId:claim.externalId }) )) | safe }}</p>
+    {% elif not claim.admissionPayImmediatelyPastPaymentDate %}
+      <h2 class="heading-small">{{ t('What to do if they don’t pay') }}</h2>
+      <p>{{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
     {% endif %}
   </div>
 {% endmacro %}
