Updated code to check for decision type

--- a/src/main/features/response/views/confirmation/full-admission.njk
+++ b/src/main/features/response/views/confirmation/full-admission.njk
@@ -6,21 +6,17 @@
 
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
   <p>{{ t('We’ve emailed {{ claimantName }} to tell them you’ll pay immediately.', { claimantName: claimantName }) }}</p>
-{% endif %}
 
-{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+{% elif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
   <p>{{ t('We’ve emailed {{ claimantName }} your offer to pay by {{ paymentDate }} and your explanation of why you can’t pay before then.',
       { claimantName: claimantName, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
   <p>{{ t('We’ll email you to tell you their response.') }}</p>
-  {% if claim.claimData.defendant.isBusiness() %}
+  {% elif claim.claimData.defendant.isBusiness() %}
     {{ sendFinancialDetailsForBusiness(claimantName, claimantDetailsPageURI) }}
-  {% endif  %}
-{% endif %}
 
-{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+{% elif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
   <p>{{ t('We’ve emailed {{ claimantName }} to tell them you’ve suggested paying by instalments.', { claimantName: claimantName }) }}</p>
   <p>{{ t('We’ll email you to tell you their response.') }}</p>
-  {% if claim.claimData.defendant.isBusiness() %}
+  {% elif claim.claimData.defendant.isBusiness() %}
     {{ sendFinancialDetailsForBusiness(claimantName, claimantDetailsPageURI) }}
-  {% endif  %}
 {% endif %}
