--- a/src/main/features/response/views/send-company-financial-details.njk
+++ b/src/main/features/response/views/send-company-financial-details.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, submitButton %}
+{% from "form.njk" import submitButton %}
 {% from "internalLink.njk" import internalLink %}
 {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
 
@@ -9,14 +9,11 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form novalidate method="post">
-        {{ csrfProtection(csrf) }}
         <p>{{ t('You need to send {{ claimantName }} your company or organisation’s most recent statement of accounts.', { claimantName: claimantFullName }) }}</p>
         <p>{{ t('They’ll review your accounts and can reject your suggested repayment plan if they believe you can pay sooner.') }}</p>
         <p>{{ t('If they reject your plan, the court will make a new plan based on your financial details.') }}</p>
         {{ submitButton('Continue') }}
         {{ internalLink('Get ' + claimantName + ' contact details.', claimantDetailsPageURI) }}
-      </form>
     </div>
   </div>
 {% endblock %}
